<resources>
    <string name="app_name">To Do</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="to_do">To-Do</string>
    <string name="task">Task</string>
    <string name="details">Details</string>
    <string name="uncheck_my_tasks_every">Uncheck my tasks every</string>
    <string name="ok">OK</string>
    <string name="add_task">Add a Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string-array name="task_titles">
        <item>Task</item>
        <item>Task</item>
        <item>Task</item>
    </string-array>

    <string-array name="task_descriptions">
        <item>Task description task description task description task description task description task description task description</item>
        <item>Task description task description task description task description task description task description task description</item>
        <item>Task description task description task description task description task description task description task description</item>
    </string-array>

    <string-array name="frequency_selection">
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
    </string-array>

</resources>