<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".AddTaskFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        style="@style/heading"
        android:text="@string/add_task" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        style="@style/fieldTitle"
        android:text="@string/title" />

    <EditText
        android:id="@+id/edit_title_view"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:hint="@string/title"
        android:inputType="text"
        style="@style/editTextStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        style="@style/fieldTitle"
        android:text="@string/description" />

    <EditText
        android:id="@+id/edit_description_view"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:layout_marginBottom="40dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        style="@style/editTextStyle" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:background="@drawable/button_rectangle"
        style="buttonStyle" />

</LinearLayout>